[gd_scene load_steps=13 format=2]

[ext_resource path="res://Duck/walk1.png" type="Texture" id=1]
[ext_resource path="res://Scripts/StateMachine.gd" type="Script" id=2]
[ext_resource path="res://Duck/States/Move.gd" type="Script" id=3]
[ext_resource path="res://Duck/States/Walk.gd" type="Script" id=4]
[ext_resource path="res://Duck/walk2.png" type="Texture" id=5]
[ext_resource path="res://Duck/fly.png" type="Texture" id=6]
[ext_resource path="res://Duck/Duck.gd" type="Script" id=7]
[ext_resource path="res://Duck/States/Invuln.gd" type="Script" id=8]
[ext_resource path="res://Audio/quack.wav" type="AudioStream" id=9]

[sub_resource type="CircleShape2D" id=1]
radius = 29.6746

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 1 ) ],
"loop": true,
"name": "fly",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ), ExtResource( 5 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
} ]

[sub_resource type="GDScript" id=3]
script/source = "extends AudioStreamPlayer

func _physics_process(_delta):
	pitch_scale = Globals.pitch
"

[node name="Duck" type="Area2D" groups=[
"duck",
]]
collision_layer = 3
script = ExtResource( 7 )
score_per_second = 2.0

[node name="Shape" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="AnimatedSprite" parent="."]
position = Vector2( 2.71021, 4.90933 )
scale = Vector2( 0.342294, 0.342294 )
frames = SubResource( 2 )
animation = "idle"

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 2 )

[node name="Walk" type="Node" parent="StateMachine"]
script = ExtResource( 4 )
sprite = NodePath("../../Sprite")
quack_path = NodePath("../../AudioStreamPlayer")

[node name="Fly" type="Node" parent="StateMachine"]
script = ExtResource( 3 )
animation = "fly"
gravity = 10.0
jump_speed = -300.0
action = "jump"
sprite = NodePath("../../Sprite")
rotation_speed_degrees = 60.0
rotation_degrees = -30.0
quack_path = NodePath("../../AudioStreamPlayer")

[node name="Swim" type="Node" parent="StateMachine"]
script = ExtResource( 3 )
animation = "idle"
gravity = -8.0
jump_speed = 250.0
action = "dive"
flip_v = true
sprite = NodePath("../../Sprite")
rotation_speed_degrees = -60.0
rotation_degrees = 30.0
quack_path = NodePath("../../AudioStreamPlayer")

[node name="Invuln" type="Node" parent="StateMachine"]
script = ExtResource( 8 )

[node name="Timer" type="Timer" parent="StateMachine/Invuln"]
one_shot = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
script = SubResource( 3 )
[connection signal="area_entered" from="." to="StateMachine/Invuln" method="_on_Duck_area_entered"]
[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="StateMachine/Invuln" method="_on_Duck_area_exited"]
[connection signal="entered" from="StateMachine/Invuln" to="." method="_on_Invuln_entered"]
[connection signal="exited" from="StateMachine/Invuln" to="." method="_on_Invuln_exited"]
